--- a/sass/layout/_catalog.scss
+++ b/sass/layout/_catalog.scss
@@ -2,17 +2,20 @@
   display: flex;
   flex-wrap: wrap;
   @extend %list;
-  @include mq(tablet-only){
-    & > .card__item{
+
+  @include mq(tablet-only) {
+    &>.card__item {
       --card-item: 2;
     }
   }
-  @include mq(desktop){
-    & > .card__item{
+
+  @include mq(desktop) {
+    &>.card__item {
       --card-item: 3;
     }
   }
 }
+
 .catalog__variant {
   flex-grow: 1;
   padding: 20px 24px;
@@ -21,6 +24,7 @@
   border-left: 1px solid var(--border-color-second);
   border-right: 1px solid var(--border-color-second);
 }
+
 .catalog__title {
   margin-bottom: 4px;
 
@@ -31,11 +35,13 @@
 
   color: var(--secondary-text-color);
 }
+
 .catalog__position {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
+
 .catalog__link {
   display: flex;
   flex-direction: column;
@@ -43,22 +49,25 @@
   @extend %link;
   color: inherit;
   transition: box-shadow var(--transition);
-  &:hover, &:focus {
+
+  &:hover,
+  &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  &:hover .catalog__description, &:focus .catalog__description {
+
+  &:hover .catalog__description,
+  &:focus .catalog__description {
     opacity: 1;
     transform: translateY(0);
   }
-  
-
 }
 
 .catalog__img {
   position: relative;
   overflow: hidden;
 }
+
 .catalog__description {
   position: absolute;
   top: 0;
@@ -66,6 +75,7 @@
   width: 100%;
   height: 100%;
   padding: 63px 24px;
+  overflow: auto;
 
   font-size: 18px;
   line-height: 1.56;
@@ -73,9 +83,14 @@
   transform: translateY(100%);
   color: var(--third-color-text);
   background-color: rgba(33, 150, 243, 0.9);
-  pointer-events: none;
   opacity: 0;
 
   transition: transform var(--transition), opacity var(--transition),
     background-color var(--transition);
+
+  @include mq(mobile) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
