--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,11 +6,11 @@
   transform: translate(-50%, -50%) scale(1);
   max-width: 450px;
   width: 100%;
-  min-height: 581px;
+  height: 100%;
+  overflow: auto;
 
   @include mq(tablet-only) {
     min-width: 450px;
-    min-height: 609px;
   }
 
   @include mq(desktop) {
@@ -180,6 +180,7 @@
 .checkbox__icon {
   width: 16px;
   height: 15px;
+  flex-shrink: 0;
   border: 2px solid;
   border-radius: 4px;
   border-color: var(--title-text-color);
