--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,25 +1,28 @@
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  & > .social__icon {
+
+  &>.social__icon {
     fill: var(--third-color-text);
   }
 
   background-color: var(--secondary-bg-color);
 }
+
 .footer__container {
   @include mq(mobile-only) {
     display: block;
     justify-content: center;
     align-items: center;
-    height: 500px;
-    max-width: 480px;
   }
+
   @include mq(tablet-only) {
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
+    justify-content: space-around;
   }
+
   @include mq(desktop) {
     display: flex;
     align-items: baseline;
@@ -28,23 +31,23 @@
     margin-right: auto;
   }
 }
+
 .footer__item {
   @include mq(mobile-only) {
     &:not(:last-child) {
       margin-bottom: 60px;
     }
   }
+
   @include mq(tablet-only) {
     text-align: center;
-    margin-left: auto;
-    &:last-child {
-      margin-right: auto;
-    }
+
+
     &:not(:last-child) {
       margin-bottom: 60px;
-      margin-right: 70px;
     }
   }
+
   &:last-child {
     @include mq(desktop) {
       margin-left: auto;
@@ -58,19 +61,24 @@
     justify-content: center;
     text-align: center;
   }
+
   @include mq(desktop) {
     margin-right: 70px;
   }
+
   font-style: inherit;
 }
+
 .address__list {
   @include mq(mobile-only) {
     display: block;
     justify-content: center;
     align-items: center;
   }
+
   @extend %list;
 }
+
 .address__item:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -79,14 +87,18 @@
 .footer__link--info {
   @extend %link;
 }
+
 .footer__link--info[target='_blank'] {
   color: var(--third-color-text);
 }
+
 .footer__link--info {
   color: rgba(255, 255, 255, 0.6);
   transition: color var(--transition);
 }
+
 .footer__link--info {
+
   &:hover,
   &:focus {
     color: var(--accent-text-color);
@@ -99,6 +111,7 @@
     justify-content: center;
     align-items: center;
   }
+
   display: block;
   font-weight: 700;
   font-size: 14px;
@@ -117,25 +130,31 @@
     text-align: center;
     width: 450px;
   }
+
   @include mq(desktop) {
     display: flex;
     align-items: center;
   }
 }
+
 .submit__input {
   @include mq(mobile-only) {
     width: 100%;
     margin-bottom: 20px;
   }
+
   @include mq(tablet-only) {
     width: 100%;
     margin-bottom: 20px;
   }
+
   padding-left: 16px;
   margin-right: 12px;
+
   @include mq(desktop) {
     width: 358px;
   }
+
   height: 50px;
 
   font-weight: 700;
@@ -150,6 +169,7 @@
   color: rgba(255, 255, 255, 0.6);
   background-color: inherit;
 }
+
 .submit__icon {
   margin-left: 10px;
   width: 24px;
