--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,19 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 999;
-
-  @include mq(mobile-only) {
-    max-width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  @include mq(tablet) {
-    max-width: 768px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  z-index: 9;
 
   @include mq(desktop) {
     max-width: 100vw;
@@ -233,10 +221,10 @@
     margin-left: 10px;
   }
 
-  &:not(:first-child) {
-    &::before {
+  &:not(:last-child) {
+    &::after {
       content: '';
-      margin-right: 10px;
+      margin-left: 10px;
       border: 1px solid rgba(33, 33, 33, 0.2);
       transform: rotate(90deg);
     }
